syntax = "proto3";

option go_package = "github.com/townsag/reed/users_service/api";
import "google/protobuf/empty.proto";
package api;

service UserService {
    rpc GetUser (GetUserRequest) returns (UserReply) {}
    rpc CreateUser (CreateUserRequest) returns (CreateUserReply) {}
    rpc DeactivateUser (DeactivateUserRequest) returns (google.protobuf.Empty) {}
    // rpc LoginUser (LoginUserRequest) returns (LoginUserReply) {}
    rpc ChangeUserPassword (ChangeUserPasswordRequest) returns (google.protobuf.Empty) {}
}

message User {
    int32 user_id = 1;
    string user_name = 2;
    string email = 3;
    int32 max_documents = 4;
    // these are implicit field types
    // I am taking that to mean semantically that they will always be set by the server 
}

message GetUserRequest {
    int32 user_id = 1;
}

message UserReply {
    User user = 1;
}

message CreateUserRequest {
    string user_name = 1;
    string user_email = 2;
    string password = 3;
    optional int32 max_documents = 4;
}

message CreateUserReply {
    int32 user_id = 2;
}

message DeactivateUserRequest {
    int32 user_id = 1;
}

// message LoginUserRequest {
//     string user_name = 1;
//     string password = 2;
// }

// message LoginUserReply {
//     string a
// }

message ChangeUserPasswordRequest {
    int32 user_id = 1;
    string old_password = 2;
    string new_password = 3;
}